--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dev": "nodemon src/app.js",
     "test": "jest --coverage",
     "test:watch": "jest --watch",
-    "lint": "eslint src/**/*.js",
-    "lint:fix": "eslint src/**/*.js --fix",
+    "lint": "eslint src/",
+    "lint:fix": "eslint src/ --fix",
     "format": "prettier --write \"src/**/*.js\""
   },
   "keywords": [
@@ -21,25 +21,25 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "puppeteer": "^21.5.2",
-    "zod": "^3.22.4",
-    "winston": "^3.11.0",
-    "prom-client": "^15.1.0",
-    "express-rate-limit": "^7.1.5",
-    "dotenv": "^16.3.1",
+    "@eaprelsky/nocturna-wheel": "^3.0.2",
     "cors": "^2.8.5",
-    "nocturna-wheel": "^2.0.0"
+    "dotenv": "^16.4.7",
+    "express": "^4.21.1",
+    "express-rate-limit": "^7.5.0",
+    "prom-client": "^15.1.3",
+    "puppeteer": "^24.0.0",
+    "winston": "^3.17.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "jest": "^29.7.0",
-    "supertest": "^6.3.3",
-    "eslint": "^8.55.0",
-    "prettier": "^3.1.1",
-    "nodemon": "^3.0.2"
+    "@eslint/js": "^9.15.0",
+    "eslint": "^9.15.0",
+    "jest": "^25.0.0",
+    "nodemon": "^3.1.7",
+    "prettier": "^3.4.2",
+    "supertest": "^7.0.0"
   },
   "engines": {
     "node": ">=20.0.0"
   }
 }
-
