build: add blue-green deployment with shared network support

--- a/deploy/prod/docker-compose.blue.yml
+++ b/deploy/prod/docker-compose.blue.yml
@@ -47,4 +47,4 @@ services:
 networks:
   nocturna-network:
     name: nocturna-network
-    driver: bridge
+    external: true  # Use existing network or create if not exists
