--- a/deploy/prod/docker-compose.green.yml
+++ b/deploy/prod/docker-compose.green.yml
@@ -25,11 +25,11 @@ services:
     deploy:
       resources:
         limits:
-          memory: 2G
-          cpus: '2.0'
-        reservations:
           memory: 1G
-          cpus: '1.0'
+          cpus: '0.9'
+        reservations:
+          memory: 512M
+          cpus: '0.3'
     security_opt:
       - no-new-privileges:true
     tmpfs:
