--- a/deploy/prod/docker-compose.green.yml
+++ b/deploy/prod/docker-compose.green.yml
@@ -35,6 +35,7 @@ services:
     tmpfs:
       - /tmp
       - /app/.cache
+    shm_size: '512m'
     labels:
       - "com.nocturna.environment=production"
       - "com.nocturna.service=chart-service"
