fix(deployment): ports management for blue-green schema fixed

--- a/deploy/prod/nginx.conf
+++ b/deploy/prod/nginx.conf
@@ -2,19 +2,19 @@
 # This file is used by the deployment scripts to route traffic
 
 upstream chart_service_blue {
-    server localhost:3011;
+    server nocturna-chart-blue:3011;
     keepalive 32;
 }
 
 upstream chart_service_green {
-    server localhost:3012;
+    server nocturna-chart-green:3011;
     keepalive 32;
 }
 
 # Active upstream (modify this during deployment)
 # ACTIVE_UPSTREAM will be replaced by deployment scripts
 upstream chart_service_active {
-    server localhost:3011;  # Default: blue
+    server nocturna-chart-blue:3011;  # Default: blue
 }
 
 server {
